force-app/main/default/objects/Delivery_Product__c/Delivery_Product__c.object-meta.xml
<CustomObject>
    <label>Delivery Product</label>
    <nameField>
        <displayFormat>DP{00000000}</displayFormat>
        <label>Delivery Products No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>