force-app/main/default/objects/Delivery_Product__c/fields/Actual_Goods_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Goods_Issue_Date__c</fullName>
    <label>Actual Goods Issue Date</label>
    <type>Date</type>
</CustomField>