force-app/main/default/objects/Delivery_Product__c/fields/Delivery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Completed__c</fullName>
    <formula>OR(TEXT( Item_Status__c ) = &quot;Billing&quot;, TEXT( Item_Status__c ) = &quot;Proof of Delivery&quot;, TEXT( Item_Status__c ) = &quot;Goods Issued&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Completed</label>
    <type>Checkbox</type>
</CustomField>