force-app/main/default/objects/Delivery_Product__c/fields/Delivery_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Delivery_In_Process__c</fullName>
    <formula>AND( TEXT( Item_Status__c ) &lt;&gt; &quot;Delivery Created&quot; ,  TEXT(Item_Status__c) &lt;&gt; &quot;Billing&quot; )</formula>
    <label>Delivery In Process</label>
    <type>Checkbox</type>
</CustomField>