force-app/main/default/objects/Delivery_Product__c/fields/Delivery_Qty__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Qty__c</fullName>
    <label>Quantity to Deliver</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>