force-app/main/default/objects/Delivery_Product__c/fields/Delivery_Qty_UOM__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Qty_UOM__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAP_Measurement</valueSetName>
    </valueSet>
</CustomField>