force-app/main/default/objects/Delivery_Product__c/fields/DO_Item_No__c.field-meta.xml
<CustomField>
    <fullName>DO_Item_No__c</fullName>
    <label>DO Item No.</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>