force-app/main/default/objects/Delivery_Product__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <label>Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery Created</fullName>
                <default>true</default>
                <label>Delivery Created</label>
            </value>
            <value>
                <fullName>Picking</fullName>
            </value>
            <value>
                <fullName>Packing</fullName>
            </value>
            <value>
                <fullName>Goods Issued</fullName>
            </value>
            <value>
                <fullName>Proof Of Delivery</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>