force-app/main/default/objects/Delivery_Product__c/fields/Item_Status_Detail__c.field-meta.xml
<CustomField>
    <fullName>Item_Status_Detail__c</fullName>
    <label>Item Status Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Not yet processed</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Partially processed</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Completely processed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>