force-app/main/default/objects/Delivery_Product__c/fields/Planned_Goods_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Goods_Issue_Date__c</fullName>
    <label>Planned Goods Issue Date</label>
    <type>Date</type>
</CustomField>