force-app/main/default/objects/Delivery_Product__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <label>Material Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>